opam-version: "1.2"
author: "John Else <john.else@gmail.com>"
maintainer: "John Else <john.else@gmail.com>"
homepage: "https://github.com/johnelse/mkaudio"
bug-reports: "https://github.com/johnelse/mkaudio/issues"
dev-repo: "git://github.com/johnelse/mkaudio"
build: [
  [make "build"]
]
build-test: [
  [make "test"]
]
install: [
  [make "PREFIX=%{prefix}%" "install"]
]
remove: [
  [make "PREFIX=%{prefix}%" "uninstall"]
]
depends: [
  "jbuilder" {build}
  "ocamlfind" {build}
  "cmdliner"
  "mm"
  "result"
  "ounit" {test}
]
